--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-- name: run-notebook
+name: run-notebook
   # You may pin to the exact commit or the version.
   # uses: yaananth/run-notebook@0c7f93ef82d068f6a4bd27213e227ba796476170
   uses: yaananth/run-notebook@v1
