--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,28 @@
-name: run-notebook
-  # You may pin to the exact commit or the version.
-  # uses: yaananth/run-notebook@0c7f93ef82d068f6a4bd27213e227ba796476170
-  uses: yaananth/run-notebook@v1
-  with:
-    # Path to notebook with extension that should be executed
-    notebook: "papermill_example.ipynb"
-    # Path to parameters file with extension, contents should be json
-    params: # optional, default is {}
-    # If True, will hide inputs in notebook
-    isReport: # optional
+name: Execute notebook
+
+on: [push]
+
+jobs:
+  run:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up Python
+      uses: actions/setup-python@v1
+    - uses: yaananth/run-notebook@v1
+      env:
+        RUNNER: ${{ toJson(runner) }}
+        SECRETS: ${{ toJson(secrets) }}
+        GITHUB: ${{ toJson(github) }}
+      with:
+        notebook: "PATHTONOTEBOOK.ipynb"
+        params: "PATHTOPARAMS.json"
+        isReport: False
+        poll: True
+    - uses: actions/upload-artifact@master
+      if: always()
+      with:
+        name: output
+        path: ${{ RUNNER.temp }}/nb-runner
+      env:
+        RUNNER: ${{ toJson(runner) }}
