--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
         SECRETS: ${{ toJson(secrets) }}
         GITHUB: ${{ toJson(github) }}
       with:
-        notebook: "PATHTONOTEBOOK.ipynb"
+        notebook: "papermill_example.ipynb"
         params: "PATHTOPARAMS.json"
         isReport: False
         poll: True
