--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,17 @@
 name: Test labels
 
-on: [push, pull_request]
+on: 
+  [push, pull_request]
+
 
 jobs:
   nightly_build:
-    runs-on: [ubuntu-latest]
+  
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+    
     - name: List lables in PR
       run: | 
         echo "Labels in PR"
