--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-    
+    steps:
     - name: List lables in PR
       run: | 
         echo "Labels in PR"
