--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,5 @@ jobs:
     steps:
     - name: List lables in PR
       run: | 
-        echo "Labels in PR"
-        y=${{ github.event.label.name }}
-        echo $y
-        x=${{ toJson(github.event.pull_request.labels.*.name) }}
-        echo $x
+        if: contains(github.event.pull_request.labels.*.name, 'nightly-build')
+          echo "Nightly build label"
