--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,11 +6,11 @@ on:
 
 jobs:
   nightly_build:
-    if: contains(github.event.pull_request.labels.*.name, 'nightly-build')
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest]
+    if: ${{ contains(github.event.pull_request.labels.*.name, 'nightly-build') && startsWith(matrix.os, 'ubuntu') }}
     steps:
     - name: List lables in PR
       run: | 
